<resources>
    <string name="app_name">Time Table</string>

    <string name="attendance">Attendance</string>

    <!-- Label for editor menu option to save pet and leave editor-->
    <string name="action_save">Save</string>

    <!-- Add new subject activity title -->
    <string name="title_add_subject">Add Subject</string>

    <!-- ADD NEW SUBJECT RELATED STRING -->
    <!-- Category Day -->
    <!-- Category Subject -->
    <string name="category_subject">Subject</string>
    <!-- Category Attendance -->
    <string name="category_attendance">Attendance</string>
    <!-- Hint for subject name -->
    <string name="hint_subject_name">Name of Subject</string>
    <!-- Hint for classes present edit text -->
    <string name="hint_classes_present">Classes Present</string>
    <!-- Hint for total classes edit text -->
    <string name="hint_total_classes">Total Classes</string>

    <!-- CARD VIEW ATTRIBUTES -->
    <!-- Title for total subjects in a day-->
    <string name = "title_total_subjects">Total Subjects:</string>
    <!-- Title for overall percentage on a day -->
    <string name = "title_overall_per">Overall %:</string>

    <!-- DAYS OF A WEEK -->
    <string name="day_no_day">No Day Selected</string>

    <!-- Toast messages -->
    <string name = "toast_subject_save_success">Subject Successfully Saved!</string>
    <string name = "toast_subject_save_failed">Subject can\'t be saved!</string>
    <string name = "toast_subject_add_day_success">Subject Successfully Added!</string>
    <string name = "toast_subject_add_day_failed">Subject can\'t be Added!</string>
    <string name = "toast_subject_already_exists">Subject already exists!</string>

    <!-- ALERT MESSAGES -->
    <!-- Unsaved changes alert message -->
    <string name="unsaved_changes_alert">Discard your changes and quit editing?</string>
    <!-- Discard changes alert dialog selection -->
    <string name="discard">Discard</string>
    <!-- Keep editing alert dialog selection -->
    <string name="keep_editing">Keep editing</string>

    <!-- SUBJECT LIST ITEM LABELS (Hidden Layer) -->
    <string name="attended">Attended</string>
    <string name="bunked">Bunked</string>
    <string name="cancelled">Cancelled</string>
    <string name="reset">Reset</string>
</resources>
